--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home</title>
+    <title>Shoes-Shop</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -26,7 +26,7 @@
     />
 
     <!-- css -->
-    <link rel="stylesheet" href="../../css/main.css" />
+    <link rel="stylesheet" href="./css/style.min.css" />
   </head>
   <body>
     <!-- header -->
@@ -36,7 +36,7 @@
         <nav class="navbar">
           <div class="container">
             <a class="navbar-brand header-left" href="#">
-              <img src="../../assets/img/image 3.png" alt="" />
+              <img src="./images/image 3.png" alt="" />
             </a>
 
             <div class="header-right">
@@ -82,7 +82,7 @@
                   <a class="nav-link" href="#">Men</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Women</a>
+                  <a class="nav-link" href="#">Woman</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Kid</a>
@@ -138,7 +138,7 @@
                 >
                   <div class="col-12 col-lg-9">
                     <img
-                      src="../../assets/img/image 4.png"
+                      src="./images/image 4.png"
                       class="d-block"
                       alt="..."
                     />
@@ -162,7 +162,7 @@
                 >
                   <div class="col-12 col-lg-9">
                     <img
-                      src="../../assets/img/image 4.png"
+                      src="./images/image 4.png"
                       class="d-block"
                       alt="..."
                     />
@@ -186,7 +186,7 @@
                 >
                   <div class="col-12 col-lg-9">
                     <img
-                      src="../../assets/img/image 4.png"
+                      src="./images/image 4.png"
                       class="d-block"
                       alt="..."
                     />
@@ -211,7 +211,7 @@
             data-bs-slide="prev"
           >
             <span class="carousel-btn_icon" aria-hidden="true">
-              <img src="../../assets/img/Polygon 2.png" alt="" />
+              <img src="./images/Polygon 2.png" alt="" />
             </span>
 
             <span class="visually-hidden">Previous</span>
@@ -223,13 +223,13 @@
             data-bs-slide="next"
           >
             <span class="carousel-btn_icon" aria-hidden="true">
-              <img src="../../assets/img/Polygon 1.png" alt="" />
+              <img src="./images/Polygon 1.png" alt="" />
             </span>
             <span class="visually-hidden">Next</span>
           </button>
         </div>
       </div>
-      <img class="carousel-bg" src="../../assets/img/image 6.png" alt="" />
+      <img class="carousel-bg" src="./images/image 6.png" alt="" />
     </section>
 
     <!-- product feature -->
@@ -482,8 +482,8 @@
       referrerpolicy="no-referrer"
     ></script>
     <!-- backtotop -->
-    <script src="../controllers/backtotop/util.js"></script>
-    <script src="../controllers/backtotop/backtotop.js"></script>
+    <script src="./controllers/backtotop/util.js"></script>
+    <script src="./controllers/backtotop/backtotop.js"></script>
     <!-- Navbarscroll -->
     <script type="text/javascript">
       window.addEventListener('scroll', function () {
@@ -492,7 +492,7 @@
       });
     </script>
 
-    <script src="../controllers/ajax.js"></script>
-    <script src="../controllers/index.js"></script>
+    <script src="./controllers/indexAjax.js"></script>
+    <!-- <script src="../controllers/index.js"></script> -->
   </body>
 </html>
