--- a/detail.html
+++ b/detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Home</title>
+    <title>Detail</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -16,7 +16,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- css -->
-    <link rel="stylesheet" href="../../css/main.css" />
+    <link rel="stylesheet" href="./css/style.min.css" />
 </head>
 
 <body>
@@ -27,7 +27,7 @@
             <nav class="navbar">
                 <div class="container">
                     <a class="navbar-brand header-left" href="#">
-                        <img src="../../assets/img/image 3.png" alt="" />
+                        <img src="./images/image 3.png" alt="" />
                     </a>
 
                     <div class="header-right">
@@ -61,7 +61,7 @@
                                 <a class="nav-link" href="#">Men</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Women</a>
+                                <a class="nav-link" href="#">Woman</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Kid</a>
@@ -82,7 +82,7 @@
             <div class="product-detail__layout">
                 <div class="product-detail__img">
                     <div class="bg-product">
-                        <img src="../../assets/img/image 5.png" alt="">
+                        <img src="./images/image 5.png" alt="">
                     </div>
 
                 </div>
@@ -366,7 +366,7 @@
         });
     </script>
 
-    <script src="../controllers/ajax.js"></script>
+    <script src="./controllers/indexAjax.js"></script>
 </body>
 
 </html>
