--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
-    <!-- fontawesome -->
+    <!-- font-awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -137,11 +137,7 @@
                   class="carousel-item_card row align-items-center justify-content-center"
                 >
                   <div class="col-12 col-lg-9">
-                    <img
-                      src="./images/image 4.png"
-                      class="d-block"
-                      alt="..."
-                    />
+                    <img src="./images/image 4.png" class="d-block" alt="..." />
                   </div>
                   <div class="carousel-content col-12 col-lg-3">
                     <div>
@@ -161,11 +157,7 @@
                   class="carousel-item_card row align-items-center justify-content-center"
                 >
                   <div class="col-12 col-lg-9">
-                    <img
-                      src="./images/image 4.png"
-                      class="d-block"
-                      alt="..."
-                    />
+                    <img src="./images/image 4.png" class="d-block" alt="..." />
                   </div>
                   <div class="carousel-content col-12 col-lg-3">
                     <div>
@@ -185,11 +177,7 @@
                   class="carousel-item_card row align-items-center justify-content-center"
                 >
                   <div class="col-12 col-lg-9">
-                    <img
-                      src="./images/image 4.png"
-                      class="d-block"
-                      alt="..."
-                    />
+                    <img src="./images/image 4.png" class="d-block" alt="..." />
                   </div>
                   <div class="carousel-content col-12 col-lg-3">
                     <div>
@@ -238,113 +226,7 @@
         <div class="productFeature-layout">
           <h2 class="productFeature-title">-Product Feature-</h2>
           <div class="row gy-4 productFeature-group">
-            <!-- item3 -->
-            <!-- <div class="col-12 col-md-6 col-lg-4">
-              <a href="#" class="productFeature-item">
-                <div class="productFeature-item-top">
-                  <div class="productFeature-item-img">
-                    <img src="../../assets/img/image 5.png" alt="" />
-                  </div>
-                  <h4>Adidas Prophere</h4>
-                  <p>Short Descript...</p>
-                </div>
-                <div class="row">
-                  <div class="col-6 pe-0">
-                    <div class="productFeature-item-bottom bottom-bg-yellow">
-                      <button class="productFeature-btn item-bottom-text">
-                        Buy now
-                      </button>
-                    </div>
-                  </div>
-
-                  <div class="col-6 ps-0">
-                    <div class="productFeature-item-bottom bottom-bg-grey">
-                      <button class="productFeature-price item-bottom-text">
-                        85$
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div> -->
-
-            <!-- item1 -->
-            <!-- <div class="col-12 col-md-6 col-lg-4">
-              <div class="productFeature-item">
-                <div class="productFeature-item-top">
-                  <div class="productFeature-item-img">
-                    <img src="../../assets/img/image 5.png" alt="" />
-                  </div>
-                  <h4>Adidas Prophere</h4>
-                  <p>Short Descript...</p>
-                </div>
-                <div class="productFeature-item-bottom row">
-                  <div class="col-6 pe-0">
-                    <a class="productFeature-btn item-bottom-text" href="#"
-                      >Buy now</a
-                    >
-                  </div>
-
-                  <div class="col-6 ps-0">
-                    <a class="productFeature-price item-bottom-text" href="#"
-                      >85$</a
-                    >
-                  </div>
-                </div>
-              </div>
-            </div> -->
-
-            <!-- item2 -->
-            <!-- <div class="col-12 col-md-6 col-lg-4">
-              <div class="productFeature-item">
-                <div class="productFeature-item-top">
-                  <div class="productFeature-item-img">
-                    <img src="../../assets/img/image 5.png" alt="" />
-                  </div>
-                  <h4>Adidas Prophere</h4>
-                  <p>Short Descript...</p>
-                </div>
-                <div class="productFeature-item-bottom row">
-                  <div class="col-6 pe-0">
-                    <a class="productFeature-btn item-bottom-text" href="#"
-                      >Buy now</a
-                    >
-                  </div>
-
-                  <div class="col-6 ps-0">
-                    <a class="productFeature-price item-bottom-text" href="#"
-                      >85$</a
-                    >
-                  </div>
-                </div>
-              </div>
-            </div> -->
-
-            <!-- item3 -->
-            <!-- <div class="col-12 col-md-6 col-lg-4">
-              <div class="productFeature-item">
-                <div class="productFeature-item-top">
-                  <div class="productFeature-item-img">
-                    <img src="../../assets/img/image 5.png" alt="" />
-                  </div>
-                  <h4>Adidas Prophere</h4>
-                  <p>Short Descript...</p>
-                </div>
-                <div class="productFeature-item-bottom row">
-                  <div class="col-6 pe-0">
-                    <a class="productFeature-btn item-bottom-text" href="#"
-                      >Buy now</a
-                    >
-                  </div>
-
-                  <div class="col-6 ps-0">
-                    <a class="productFeature-price item-bottom-text" href="#"
-                      >85$</a
-                    >
-                  </div>
-                </div>
-              </div>
-            </div> -->
+           <!-- arrproduct -->
           </div>
         </div>
       </div>
@@ -383,10 +265,7 @@
                 <h2>REGISTER</h2>
                 <ul>
                   <li>
-                    <a href="#"
-                      >Create one account to manage everthing you do with Nike,
-                      from your shopping preferences to your Nike+ activity.</a
-                    >
+                    <a href="#"></a>
                   </li>
                   <li>
                     <a class="footer-item-text-red" href="#">Learn more</a>
@@ -394,7 +273,6 @@
                 </ul>
               </div>
             </div>
-            <!--  -->
           </div>
         </div>
       </div>
@@ -419,7 +297,6 @@
                 </ul>
               </div>
             </div>
-
             <div class="col-12 col-md-6 col-lg-4">
               <div class="footer-item footer-bd">
                 <h2>GIFT CARDS</h2>
@@ -431,7 +308,6 @@
                 </ul>
               </div>
             </div>
-
             <div class="col-12 col-md-6 col-lg-4">
               <div class="footer-item">
                 <h2>SOTRES NEAR YOU</h2>
@@ -447,7 +323,6 @@
                 </ul>
               </div>
             </div>
-            <!--  -->
           </div>
         </div>
       </div>
@@ -455,9 +330,6 @@
     <a href="#" class="backToTop cd-top text-replace js-cd-top">
       <i class="fas fa-chevron-up"></i>
     </a>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -474,6 +346,7 @@
       integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
       crossorigin="anonymous"
     ></script>
+
     <!-- axios -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"
@@ -481,18 +354,19 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+
     <!-- backtotop -->
     <script src="./controllers/backtotop/util.js"></script>
     <script src="./controllers/backtotop/backtotop.js"></script>
+
     <!-- Navbarscroll -->
     <script type="text/javascript">
-      window.addEventListener('scroll', function () {
-        var header = document.querySelector('header');
-        header.classList.toggle('sticky', window.scrollY > 0);
+      window.addEventListener("scroll", function () {
+        var header = document.querySelector("header");
+        header.classList.toggle("sticky", window.scrollY > 0);
       });
     </script>
 
     <script src="./controllers/indexAjax.js"></script>
-    <!-- <script src="../controllers/index.js"></script> -->
   </body>
 </html>
