--- a/detail.html
+++ b/detail.html
@@ -16,7 +16,7 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
-    <!-- font-awesome -->
+    <!-- fontawesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -24,6 +24,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
     <!-- css -->
     <link rel="stylesheet" href="./css/style.min.css" />
   </head>
@@ -41,6 +42,7 @@
 
             <div class="header-right">
               <a class="header-right_cart" href="#">
+                <!-- <img src="../../assets/img/image 8.png" alt="" /> -->
                 <i class="fa-solid fa-cart-arrow-down"></i>
                 <span class="header-right_cart_count">(1)</span>
               </a>
@@ -55,6 +57,7 @@
       <div class="header-menu">
         <nav class="navbar navbar-expand-lg">
           <div class="container">
+            <!-- <a class="navbar-brand" href="#">Navbar</a> -->
             <button
               class="navbar-toggler"
               type="button"
@@ -99,35 +102,57 @@
     <section class="product-detail">
       <div class="container">
         <div class="product-detail__layout">
-          <div class="product-detail__img">
-            <div class="bg-product">
-              <!-- <img src="./images/image 5.png" alt="" /> -->
-            </div>
-          </div>
-          <div class="product-detail__content">
-            <h3 class="product__name">Product name</h3>
-            <p class="product__info">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores
-              pariatur sequi esse ducimus veritatis aspernatur totam inventore,
-              tempore rem impedit illum qui a quae aperiam officiis, error
-              repellat sunt nulla! ( Thuộc tính Description)
-            </p>
-            <p class="available-size">Available size</p>
-            <ul class="product__size-selection">
-              <li>38</li>
-              <li>39</li>
-              <li>40</li>
-              <li>41</li>
-              <li>42</li>
-            </ul>
-            <p class="product__price">85$</p>
-            <div class="product-amount">
-              <button class="product-amount__plus">+</button>
-              <span class="product-amount__selected">1</span>
-              <button class="product-amount__minus">-</button>
-            </div>
-            <button class="btnProductAdd">Add to cart</button>
-          </div>
+          <!-- <div class="product-detail__img">
+                    <div class="bg-product">
+                        <img src=".images/image 5.png" alt="">
+                    </div>
+
+                </div>
+                <div class="product-detail__content">
+                    <h3 class="product__name">
+                        Product name
+                    </h3>
+                    <p class="product__info">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores pariatur sequi esse ducimus
+                        veritatis aspernatur totam inventore, tempore rem impedit illum qui a quae aperiam officiis,
+                        error repellat sunt nulla! ( Thuộc tính Description)
+                    </p>
+                    <p class="available-size">
+                        Available size
+                    </p>
+                    <ul class="product__size-selection btn-group" role="group" aria-label="Basic example">
+                        <li>
+                            <button type="button" class="btn">38</button>
+                        </li>
+                        <li>
+                            <button type="button" class="btn">39</button>
+
+                        </li>
+                        <li>
+                            <button type="button" class="btn">40</button>
+
+                        </li>
+                        <li>
+                            <button type="button" class="btn">41</button>
+
+                        </li>
+                        <li>
+                            <button type="button" class="btn">42</button>
+
+                        </li>
+                    </ul>
+                    <p class="product__price">
+                        85$
+                    </p>
+                    <div class="product-amount">
+                        <button class="product-amount__plus">+</button>
+                        <span class="product-amount__selected">1</span>
+                        <button class="product-amount__minus">-</button>
+                    </div>
+                    <button class="btnProductAdd">
+                        Add to cart
+                    </button>
+                </div> -->
         </div>
       </div>
     </section>
@@ -138,7 +163,7 @@
         <div class="productFeature-layout">
           <h2 class="productFeature-title">-Realate Product-</h2>
           <div class="row gy-4 productFeature-group">
-            <!-- arrproduct -->
+          <!-- arrpro -->
           </div>
         </div>
       </div>
@@ -188,6 +213,7 @@
                 </ul>
               </div>
             </div>
+            <!--  -->
           </div>
         </div>
       </div>
@@ -212,6 +238,7 @@
                 </ul>
               </div>
             </div>
+
             <div class="col-12 col-md-6 col-lg-4">
               <div class="footer-item footer-bd">
                 <h2>GIFT CARDS</h2>
@@ -223,6 +250,7 @@
                 </ul>
               </div>
             </div>
+
             <div class="col-12 col-md-6 col-lg-4">
               <div class="footer-item">
                 <h2>SOTRES NEAR YOU</h2>
@@ -238,6 +266,7 @@
                 </ul>
               </div>
             </div>
+            <!--  -->
           </div>
         </div>
       </div>
@@ -245,6 +274,9 @@
     <a href="#" class="backToTop cd-top text-replace js-cd-top">
       <i class="fas fa-chevron-up"></i>
     </a>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -261,6 +293,7 @@
       integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
       crossorigin="anonymous"
     ></script>
+
     <!-- axios -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"
@@ -272,7 +305,7 @@
     <!-- backtotop -->
     <script src="./controllers/backtotop/util.js"></script>
     <script src="./controllers/backtotop/backtotop.js"></script>
-    
+
     <!-- Navbarscroll -->
     <script type="text/javascript">
       window.addEventListener("scroll", function () {
@@ -281,7 +314,7 @@
       });
     </script>
 
-    <script src="./controllers/indexAjax.js"></script>
-    <script src="./controllers/detailAjax.js"></script>
+    <!-- <script src="../controllers/ajax.js"></script> -->
+    <script type="module" src="./controllers/detailAjax.js"></script>
   </body>
 </html>
